# spin-token-auth

./: .editorconfig  .envrc.template  .gitignore  Cargo.toml  Makefile  README.md  spin.toml
.github/workflows/: build.yml  release.yml
scripts/: test-auth0.sh
src/: config.rs  jwk.rs  jwks.rs  lib.rs  request.rs
