[package]
name = "spin-token-auth"
authors = ["Justin Pflueger <justin.pflueger@fermyon.com>"]
description = "Token verification and authorization as a Spin component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
base64 = "0.21.0"
bytes = "1"
http = "0.2"
jwt-simple = "0.11.4"
serde = "1.0.157"
serde_json = "1.0.94"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.0.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]
